--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@ label {
 <script>
 
 // 🔗 PUT YOUR CSV LINKS HERE
-const structureURL = "https://docs.google.com/spreadsheets/d/15KrrSbaYxPgIC0VzM-2BZBnNHQY0DoY9iyo8Eyq520Y/edit?gid=1129509567#gid=1129509567";
-const fileURL = "https://docs.google.com/spreadsheets/d/1mETbNwRaIHuUzudOxHWAoJOmfzCTycsWNXK-4CEKmMY/edit?gid=1496488285#gid=1496488285";
+const structureURL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTMxcWj-ndN4mhQVcsGGNH7mTHWYnViEZv3QIytw6FYF4NEYJFT78WRbfFkQBefc6DP1eozP48RZele/pubhtml";
+const fileURL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vQzYfjDVPRZUNdaYo3yRnLE3ZTqOng8g7m7ZywHGd8irLgoKrSaGZ8zE-Kv4YHL5xrRuclzkCTYdH0p/pubhtml";
 
 let structureData = [];
 let fileData = [];
@@ -210,4 +210,5 @@ function showFiles(){
 </script>
 
 </body>
+
 </html>
