--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@ label {
 <script>
 
 // 🔗 PUT YOUR CSV LINKS HERE
-const structureURL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTMxcWj-ndN4mhQVcsGGNH7mTHWYnViEZv3QIytw6FYF4NEYJFT78WRbfFkQBefc6DP1eozP48RZele/pubhtml";
-const fileURL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vQzYfjDVPRZUNdaYo3yRnLE3ZTqOng8g7m7ZywHGd8irLgoKrSaGZ8zE-Kv4YHL5xrRuclzkCTYdH0p/pubhtml";
+const structureURL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR0R6jVdyfATmBNYLG2bcy4VF-DxWSLvrVFOe9qepHCCph6OCcIUGOwAkiNRn_TSGM-jr8VgjWC8-PU/pub?gid=1122095800&single=true&output=csv";
+const fileURL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vRPSHnZioYj2Xdxx0CNi5VYlzlm0OL5aWAnr_eI9rSyboMnznDUyJzYt1DZ0Vret_CRqxO2aP8fDy9y/pub?gid=1791414175&single=true&output=csv";
 
 let structureData = [];
 let fileData = [];
@@ -230,4 +230,5 @@ function showFiles(){
 </body>
 
 </html>
+
 
