--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Planogram Finder</title>
+<title>QLD Retail Space Planograms</title>
 
 <style>
 body { font-family: Arial; padding: 15px; background:#f4f6f8; }
@@ -170,5 +170,6 @@ function showFiles(){
 
 </body>
 </html>
+
 
 
