--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@ label { font-weight:bold; margin-top:10px; display:block; }
 
 <body>
 
-<h2>Planogram Finder</h2>
+<h2>QLD Retail Space Planograms</h2>
 
 <label>Channel</label>
 <select id="channel" onchange="updateGroups()"></select>
 
-<label>Group</label>
-<select id="group" onchange="updateCategories()"></select>
+<label>Department</label>
+<select id="Department" onchange="updateCategories()"></select>
 
 <label>Category</label>
 <select id="category" onchange="showFiles()"></select>
@@ -170,6 +170,7 @@ function showFiles(){
 
 </body>
 </html>
+
 
 
 
