--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ label { font-weight:bold; margin-top:10px; display:block; }
 <label>Channel</label>
 <select id="channel" onchange="updateGroups()"></select>
 
-<label>Department</label>
-<select id="Department" onchange="updateCategories()"></select>
+<label>Group</label>
+<select id="Group" onchange="updateCategories()"></select>
 
 <label>Category</label>
 <select id="category" onchange="showFiles()"></select>
@@ -170,6 +170,7 @@ function showFiles(){
 
 </body>
 </html>
+
 
 
 
